--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -268,10 +268,12 @@ jobs:
       - name: Flaky Unit Test Detection
         if: ${{ !cancelled() && !inputs.run_single_unit_test && env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 30
-        # Not retrying failed tests intentionally here since we're trying to detect flakes.
         run: |
           echo "Detecting flaky unit tests: ${{ needs.set-up-single-test.outputs.modified_unit_test_suites }}"
-          make unit-test FAILED_TEST_RETRIES=0 TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_unit_test_suites }} -count=10"
+          make unit-test TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_unit_test_suites }} -count=10"
+        env:
+          # Not retrying failed tests intentionally here since we're trying to detect flakes.
+          FAILED_TEST_RETRIES: "0"
 
       - name: Upload test results
         if: ${{ !cancelled() }}
@@ -326,10 +328,13 @@ jobs:
       - name: Flaky Integration Test Detection
         if: ${{ env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 30
-        # Not retrying failed tests intentionally here since we're trying to detect flakes.
         run: |
           echo "Detecting flaky integration tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
-          make integration-test-coverage FAILED_TEST_RETRIES=0 TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_integration_test_suites }} -count=5"
+          make integration-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_integration_test_suites }} -count=5"
+        env:
+          # Not retrying failed tests intentionally here since we're trying to detect flakes.
+          FAILED_TEST_RETRIES: "0"
+
       - name: Upload test results
         if: ${{ !cancelled() }}
         run: make upload-test-results
@@ -438,10 +443,12 @@ jobs:
       - name: Flaky Functional Test Detection
         if: ${{ (env.MODIFIED_TEST_SUITES != '') && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
-        # Not retrying failed tests intentionally here since we're trying to detect flakes.
         run: |
           echo "Detecting flaky functional tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
-          make functional-test-coverage FAILED_TEST_RETRIES=0 TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_test_suites }} -count=5"
+          make functional-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_test_suites }} -count=5"
+        env:
+          # Not retrying failed tests intentionally here since we're trying to detect flakes.
+          FAILED_TEST_RETRIES: "0"
 
       - name: Upload test results
         if: ${{ !cancelled() && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
@@ -525,10 +532,12 @@ jobs:
       - name: Flaky Functional XDC Test Detection
         if: ${{ env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 60
-        # Not retrying failed tests intentionally here since we're trying to detect flakes.
         run: |
           echo "Detecting flaky functional xdc tests: ${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }}"
-          make functional-test-xdc-coverage FAILED_TEST_RETRIES=0 TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }} -count=5"
+          make functional-test-xdc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }} -count=5"
+        env:
+          # Not retrying failed tests intentionally here since we're trying to detect flakes.
+          FAILED_TEST_RETRIES: "0"
 
       - name: Upload test results
         if: ${{ !cancelled() }}
@@ -613,10 +622,12 @@ jobs:
       - name: Flaky Functional NDC Test Detection
         if: ${{ env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 30
-        # Not retrying failed tests intentionally here since we're trying to detect flakes.
         run: |
           echo "Detecting flaky functional ndc tests: ${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }}"
-          make functional-test-ndc-coverage FAILED_TEST_RETRIES=0 TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }} -count=5"
+          make functional-test-ndc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }} -count=5"
+        env:
+          # Not retrying failed tests intentionally here since we're trying to detect flakes.
+          FAILED_TEST_RETRIES: "0"
 
   test-status:
     if: always()
