--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -232,9 +232,6 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       BUILDKITE_MESSAGE: '{"job": "unit-test"}'
-      TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
-      # TODO: This doesn't seem to do anything
-      RUN_SINGLE_UNIT_TEST: ${{ inputs.run_single_unit_test }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -264,16 +261,19 @@ jobs:
         env:
           UNIT_TEST_DIRS: ${{ inputs.unit_test_directory }}
           TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
+          TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
 
       - name: Flaky Unit Test Detection
         if: ${{ !cancelled() && !inputs.run_single_unit_test && env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 30
         run: |
           echo "Detecting flaky unit tests: ${{ needs.set-up-single-test.outputs.modified_unit_test_suites }}"
-          make unit-test TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_unit_test_suites }} -count=10"
+          make unit-test
         env:
           # Not retrying failed tests intentionally here since we're trying to detect flakes.
           FAILED_TEST_RETRIES: "0"
+          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_unit_test_suites }} -count=10"
+          TEST_TIMEOUT: 25
 
       - name: Upload test results
         if: ${{ !cancelled() }}
@@ -330,10 +330,11 @@ jobs:
         timeout-minutes: 30
         run: |
           echo "Detecting flaky integration tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
-          make integration-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_integration_test_suites }} -count=5"
+          make integration-test-coverage
         env:
           # Not retrying failed tests intentionally here since we're trying to detect flakes.
           FAILED_TEST_RETRIES: "0"
+          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_integration_test_suites }} -count=5"
 
       - name: Upload test results
         if: ${{ !cancelled() }}
@@ -396,8 +397,6 @@ jobs:
       TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
       BUILDKITE_MESSAGE: '{"job": "functional-test", "db": "${{ matrix.persistence_driver }}"}'
     steps:
-      - name: Print functional test
-        run: echo "${{ needs.set-up-single-test.outputs.dbs }}" && echo "${{ needs.set-up-single-test.outputs.single_test_args }}"
       - uses: ScribeMD/docker-cache@0.3.7
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
@@ -438,17 +437,20 @@ jobs:
       - name: Run functional test
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
-        run: make functional-test-coverage TEST_ARGS="${{ needs.set-up-single-test.outputs.single_test_args }}"
+        run: make functional-test-coverage
+        env:
+          TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
 
       - name: Flaky Functional Test Detection
         if: ${{ (env.MODIFIED_TEST_SUITES != '') && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
         run: |
           echo "Detecting flaky functional tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
-          make functional-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_test_suites }} -count=5"
+          make functional-test-coverage
         env:
           # Not retrying failed tests intentionally here since we're trying to detect flakes.
           FAILED_TEST_RETRIES: "0"
+          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_functional_test_suites }} -count=5"
 
       - name: Upload test results
         if: ${{ !cancelled() && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
@@ -534,10 +536,11 @@ jobs:
         timeout-minutes: 60
         run: |
           echo "Detecting flaky functional xdc tests: ${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }}"
-          make functional-test-xdc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }} -count=5"
+          make functional-test-xdc-coverage
         env:
           # Not retrying failed tests intentionally here since we're trying to detect flakes.
           FAILED_TEST_RETRIES: "0"
+          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }} -count=5"
 
       - name: Upload test results
         if: ${{ !cancelled() }}
@@ -624,10 +627,11 @@ jobs:
         timeout-minutes: 30
         run: |
           echo "Detecting flaky functional ndc tests: ${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }}"
-          make functional-test-ndc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }} -count=5"
+          make functional-test-ndc-coverage
         env:
           # Not retrying failed tests intentionally here since we're trying to detect flakes.
           FAILED_TEST_RETRIES: "0"
+          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }} -count=5"
 
   test-status:
     if: always()
