--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -232,10 +232,6 @@ jobs:
     runs-on: ubuntu-20.04
     env:
       BUILDKITE_MESSAGE: '{"job": "unit-test"}'
-      SINGLE_TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
-      UNIT_TEST_DIR: ${{ inputs.unit_test_directory }}
-      TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
-      RUN_SINGLE_UNIT_TEST: ${{ inputs.run_single_unit_test }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -260,34 +256,34 @@ jobs:
           key: go-${{ runner.os }}${{ runner.arch }}-build-${{ env.COMMIT }}
 
       - name: Run unit tests
-        if: ${{ !cancelled() && !inputs.run_single_unit_test }}
         timeout-minutes: 15
         run: make unit-test-coverage
-
-      - name: Run single unit test
-        if: ${{ !cancelled() && inputs.run_single_unit_test }}
-        timeout-minutes: 15
-        run: UNIT_TEST_DIRS=$UNIT_TEST_DIR make unit-test-coverage
-
-      - name: Flaky Unit Test Detection
-        if: ${{ !cancelled() && !inputs.run_single_unit_test && env.MODIFIED_TEST_SUITES != '' }}
-        timeout-minutes: 30
-        run: |
-          echo "Detecting flaky unit tests: ${{ needs.set-up-single-test.outputs.modified_unit_test_suites }}"
-          make unit-test TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_unit_test_suites }} -count=10"
+        env:
+          UNIT_TEST_DIRS: ${{ inputs.unit_test_directory }}
+          TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
+          TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
 
       - name: Upload test results
-        if: ${{ !cancelled() }}
-        run: make upload-test-results
-
-      - name: Upload test results as a GitHub Actions artifact
         uses: actions/upload-artifact@v4.4.0
-        if: ${{ !cancelled() }}
+        if: ${{ !cancelled() && !inputs.run_single_unit_test }}
         with:
           name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--unit-test
           path: .testoutput
           retention-days: 14
           include-hidden-files: true
+
+      # Ensure this doesn't contribute to the junit output.
+      - name: Flaky Unit Test Detection
+        if: ${{ !cancelled() && !inputs.run_single_unit_test && env.MODIFIED_TEST_SUITES != '' }}
+        timeout-minutes: 30
+        run: |
+          echo "Detecting flaky unit tests: ${{ needs.set-up-single-test.outputs.modified_unit_test_suites }}"
+          make unit-test
+        env:
+          # Not retrying failed tests intentionally here since we're trying to detect flakes.
+          FAILED_TEST_RETRIES: "0"
+          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_unit_test_suites }} -count=10"
+          TEST_TIMEOUT: 25
 
   integration-test:
     if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
@@ -335,30 +331,31 @@ jobs:
         timeout-minutes: 15
         run: make integration-test-coverage
 
-      - name: Flaky Integration Test Detection
-        if: ${{ env.MODIFIED_TEST_SUITES != '' }}
-        timeout-minutes: 30
-        run: |
-          echo "Detecting flaky integration tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
-          make integration-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_integration_test_suites }} -count=5"
-          
       - name: Upload test results
-        if: ${{ !cancelled() }}
-        run: make upload-test-results
-
-      - name: Tear down docker compose
-        if: ${{ always() }}
-        run: |
-          docker compose -f ${{ env.DOCKER_COMPOSE_FILE }} down -v
-          
-      - name: Upload test results as a GitHub Actions artifact
         uses: actions/upload-artifact@v4.4.0
-        if: always()
+        if: ${{ !cancelled() }}
         with:
           name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--integration-test
           path: .testoutput
           retention-days: 14
           include-hidden-files: true
+
+      # Ensure this doesn't contribute to the junit output.
+      - name: Flaky Integration Test Detection
+        if: ${{ env.MODIFIED_TEST_SUITES != '' }}
+        timeout-minutes: 30
+        run: |
+          echo "Detecting flaky integration tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
+          make integration-test-coverage
+        env:
+          # Not retrying failed tests intentionally here since we're trying to detect flakes.
+          FAILED_TEST_RETRIES: "0"
+          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_integration_test_suites }} -count=5"
+
+      - name: Tear down docker compose
+        if: ${{ always() }}
+        run: |
+          docker compose -f ${{ env.DOCKER_COMPOSE_FILE }} down -v
 
   functional-test:
     if: ${{ inputs.run_single_unit_test != true }}
@@ -409,12 +406,9 @@ jobs:
       TEST_SHARD_INDEX: ${{ matrix.shard_index }}
       PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
       PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
-      SINGLE_TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
       TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
       BUILDKITE_MESSAGE: '{"job": "functional-test", "db": "${{ matrix.persistence_driver }}"}'
     steps:
-      - name: Print functional test
-        run: echo "${{ needs.set-up-single-test.outputs.dbs }}" && echo "$SINGLE_TEST_ARGS"
       - uses: ScribeMD/docker-cache@0.3.7
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
@@ -456,26 +450,29 @@ jobs:
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
         run: make functional-test-coverage
-
-      - name: Flaky Functional Test Detection
-        if: ${{ (env.MODIFIED_TEST_SUITES != '') && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
-        timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
-        run: |
-          echo "Detecting flaky functional tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
-          make functional-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_test_suites }} -count=5"
+        env:
+          TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
 
       - name: Upload test results
-        if: ${{ !cancelled() && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
-        run: make upload-test-results
-
-      - name: Upload test results as a GitHub Actions artifact
         uses: actions/upload-artifact@v4.4.0
-        if: ${{ !cancelled() }}
+        if: ${{ !cancelled() && !inputs.run_single_functional_test }}
         with:
           name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--${{matrix.runs-on}}--${{matrix.name}}--${{matrix.shard_index}}--functional-test
           path: .testoutput
           retention-days: 14
           include-hidden-files: true
+
+      # Ensure this doesn't contribute to the junit output.
+      - name: Flaky Functional Test Detection
+        if: ${{ (env.MODIFIED_TEST_SUITES != '') && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
+        run: |
+          echo "Detecting flaky functional tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
+          make functional-test-coverage
+        env:
+          # Not retrying failed tests intentionally here since we're trying to detect flakes.
+          FAILED_TEST_RETRIES: "0"
+          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_functional_test_suites }} -count=5"
 
   functional-test-xdc:
     if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
@@ -552,18 +549,7 @@ jobs:
         timeout-minutes: 25   # update this to TEST_TIMEOUT+5 if you update the Makefile
         run: make functional-test-xdc-coverage
 
-      - name: Flaky Functional XDC Test Detection
-        if: ${{ env.MODIFIED_TEST_SUITES != '' }}
-        timeout-minutes: 60
-        run: |
-          echo "Detecting flaky functional xdc tests: ${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }}"
-          make functional-test-xdc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }} -count=5"
-
       - name: Upload test results
-        if: ${{ !cancelled() }}
-        run: make upload-test-results
-
-      - name: Upload test results as a GitHub Actions artifact
         uses: actions/upload-artifact@v4.4.0
         if: ${{ !cancelled() }}
         with:
@@ -571,6 +557,18 @@ jobs:
           path: .testoutput
           retention-days: 14
           include-hidden-files: true
+
+      # Ensure this doesn't contribute to the junit output.
+      - name: Flaky Functional XDC Test Detection
+        if: ${{ env.MODIFIED_TEST_SUITES != '' }}
+        timeout-minutes: 60
+        run: |
+          echo "Detecting flaky functional xdc tests: ${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }}"
+          make functional-test-xdc-coverage
+        env:
+          # Not retrying failed tests intentionally here since we're trying to detect flakes.
+          FAILED_TEST_RETRIES: "0"
+          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }} -count=5"
 
   functional-test-ndc:
     if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
@@ -648,14 +646,7 @@ jobs:
         timeout-minutes: 15
         run: make functional-test-ndc-coverage
 
-      - name: Flaky Functional NDC Test Detection
-        if: ${{ env.MODIFIED_TEST_SUITES != '' }}
-        timeout-minutes: 30
-        run: |
-          echo "Detecting flaky functional ndc tests: ${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }}"
-          make functional-test-ndc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }} -count=5"
-          
-      - name: Upload test results as a GitHub Actions artifact
+      - name: Upload test results
         uses: actions/upload-artifact@v4.4.0
         if: ${{ !cancelled() }}
         with:
@@ -663,6 +654,18 @@ jobs:
           path: .testoutput
           retention-days: 14
           include-hidden-files: true
+
+      # Ensure this doesn't contribute to the junit output.
+      - name: Flaky Functional NDC Test Detection
+        if: ${{ env.MODIFIED_TEST_SUITES != '' }}
+        timeout-minutes: 30
+        run: |
+          echo "Detecting flaky functional ndc tests: ${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }}"
+          make functional-test-ndc-coverage
+        env:
+          # Not retrying failed tests intentionally here since we're trying to detect flakes.
+          FAILED_TEST_RETRIES: "0"
+          TEST_ARGS: "-run=${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }} -count=5"
 
   test-status:
     if: always()
